Fixed image alignment for profiles

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: rgb(145, 122, 122);
-$secondary-color: #bd7cb2;
+$primary-color: #444;
+$secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
