--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -91,6 +91,8 @@
       background: url("../img/portrait.jpg");
       border-radius: 50%;
       border: solid 3px $secondary-color;
+      background-position: center;
+      background-size: cover;
     }
   }
 
